--- a/docs/specification/sdb.tex
+++ b/docs/specification/sdb.tex
@@ -62,6 +62,14 @@ things that ought to be changed or added:
 
 \section*{Versioning}
 
+The SDB specification is the work of people discussing in the
+\texttt{fpga-config-space} mailing list, using the IETF approach of
+``rough consensus and running code''. Everybody can join and contribute.
+
+The mailing list is part of the project
+with the same name on \texttt{ohwr.org}. The direct
+link is \texttt{http://www.ohwr.org/projects/fpga-config-space} .
+
 This document describes a post-1.0 (But pre-1.1) status. It describes version 1 of the data
 structures. All future \textbf{compatible} releases of this
 specification will be blessed 1.\textit{x}, for some ever-increasing
