specification: not official 1.1 any more

--- a/docs/specification/sdb.tex
+++ b/docs/specification/sdb.tex
@@ -31,7 +31,7 @@
 \makesavenoteenv{tabular}
 
 \title{Self-Describing Bus (SDB)\\
-Specification for Logic Cores -- Version 1.1}
+Specification for Logic Cores -- Version 1.1 (+ changes)}
 \author{Alessandro Rubini (Consultant for CERN)\\
 Wesley Terpstra (GSI),\\
 Manohar Vanga (CERN, BE/CO/HT)}
